--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -948,7 +948,7 @@
  	 	 	 	 	"eng": "Send Gift"
  	 	 	 	},
  	 	 	 	"trade": {
- 	 	 	 	 	"trans": "Invia richiesta commerciale",
+ 	 	 	 	 	"trans": "Invia richiesta di commercio",
  	 	 	 	 	"eng": "Send Trade Request"
  	 	 	 	},
  	 	 	 	"sendCosmetic": {
@@ -1391,7 +1391,7 @@
  	 	 	 	"eng": "sound effects"
  	 	 	},
  	 	 	"enableInGameNotificationSound": {
- 	 	 	 	"trans": "Nel suono di notifica del gioco",
+ 	 	 	 	"trans": "Suoni per le notifiche dentro il gioco",
  	 	 	 	"eng": "In game notification sound"
  	 	 	},
  	 	 	"disableAttackBar": {
@@ -1400,7 +1400,7 @@
  	 	 	 	 	"eng": "Disable Attack Timing Bar"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Disattivare la barra d'attacco non permetterà danni extra",
+ 	 	 	 	 	"trans": "Disattivare la barra d'attacco non permetterà di infliggere danni extra",
  	 	 	 	 	"eng": "Disabling attack timing bar will not grant extra damage"
  	 	 	 	}
  	 	 	},
@@ -3505,14 +3505,14 @@
  	 	 	}
  	 	},
  	 	"tutorial": {
- 	 	 	"trans": "Pagina tutorial",
+ 	 	 	"trans": "Pagina del Tutorial",
  	 	 	"eng": "Tutorial Page",
  	 	 	"description": {
- 	 	 	 	"trans": "Puoi dare un'occhiata alla nostra pagina tutorial della nostra comunità per saperne di più sul gioco. Ci sono tonnellate di consigli e guide per aiutarti a iniziare!",
+ 	 	 	 	"trans": "Dai un'occhiata alla pagina del Tutorial della nostra comunità per saperne di più sul gioco. Ci sono tonnellate di consigli e guide per aiutarti a iniziare!",
  	 	 	 	"eng": "You can take a look at our community tutorial page to learn more about the game. there are tons of tips and guides to help you get started!"
  	 	 	},
  	 	 	"questProgress": {
- 	 	 	 	"trans": "Tutorial Quest Complete",
+ 	 	 	 	"trans": "Missione del Tutorial completata",
  	 	 	 	"eng": "Tutorial quest complete"
  	 	 	}
  	 	},
@@ -3603,31 +3603,31 @@
  	},
  	"MutedScreen": {
  	 	"title": {
- 	 	 	"trans": "Chat disabile",
+ 	 	 	"trans": "Chat disabilitata",
  	 	 	"eng": "Chat Disabled"
  	 	},
  	 	"description1": {
- 	 	 	"trans": "Ci dispiace molto che sia successo, per favore, capisci che dobbiamo mantenere un ambiente sicuro per tutti i giocatori e assicurarsi che tutti possano giocare in un ambiente piacevole. Ecco perché dobbiamo disattivare quando è necessario. Si prega di leggere le nostre regole di chat dal link sottostante per informazioni complete",
+ 	 	 	"trans": "Ci dispiace molto essere arrivati a questo, per favore cerca di capire che dobbiamo mantenere un ambiente sicuro per tutti i giocatori e assicurarci che tutti possano giocare in un ambiente piacevole. Ecco perché dobbiamo silenziare i giocatori quando è necessario. Per favore leggi le nostre regole di uso della chat al link sottostante per informazioni complete",
  	 	 	"eng": "We are very sorry this happened, please understand we are required to maintain a safe environment for all players and ensure that everyone can play the game in a pleasant environment. Thats why we have to mute when it is needed. please do read our chat rules from the link below for full information"
  	 	},
  	 	"description2": {
- 	 	 	"trans": "Se ritieni che sia stato un malinteso, ti preghiamo di contattare il moderatore tramite il nostro canale Discord collegato di seguito.",
+ 	 	 	"trans": "Se ritieni che ci sia stato un malinteso, per favore contatta il moderatore tramite il nostro canale Discord sottostante.",
  	 	 	"eng": "If you believe it was a misunderstanding, please contact the moderator via our discord channel linked below."
  	 	},
  	 	"description3": {
- 	 	 	"trans": "Se desideri segnalare un moderatore per abuso o cattiva condotta, potresti contattare Dexter (lo sviluppatore di questa app) tramite il modulo di ricorso sottostante",
+ 	 	 	"trans": "Se desideri segnalare un moderatore per abuso o cattiva condotta, puoi contattare direttamente Dexter (lo sviluppatore di questo gioco) tramite il modulo di ricorso sottostante.",
  	 	 	"eng": "If you would like to report a moderator for abuse or misconduct, you may reach out to Dexter (the developer of this app) via the appeal form below"
  	 	},
  	 	"description4": {
- 	 	 	"trans": "In alternativa, puoi anche contattare lo sviluppatore via e -mail all'indirizzo ching.huang.dexter@gmail.com",
+ 	 	 	"trans": "In alternativa, puoi anche contattare lo sviluppatore via e-mail all'indirizzo ching.huang.dexter@gmail.com",
  	 	 	"eng": "Alternatively, you may also contact the developer via email at ching.huang.dexter@gmail.com"
  	 	},
  	 	"rules": {
- 	 	 	"trans": "Regole di chat",
+ 	 	 	"trans": "Regole della Chat",
  	 	 	"eng": "Chat Rules"
  	 	},
  	 	"appealForm": {
- 	 	 	"trans": "Modulo di ricorso",
+ 	 	 	"trans": "Modulo di Ricorso",
  	 	 	"eng": "Appeal Form"
  	 	}
  	},
@@ -3737,7 +3737,7 @@
  	 	 	"eng": "Waiting for ${playerName} to accept the trade..."
  	 	},
  	 	"lockedItem": {
- 	 	 	"trans": "Hai bloccato questo articolo, sbloccalo prima per commerciare",
+ 	 	 	"trans": "Hai bloccato questo oggetto, sbloccalo prima di poterlo commerciare",
  	 	 	"eng": "You have locked this item, unlock it first to trade"
  	 	},
  	 	"selectAmount": {
@@ -3777,7 +3777,7 @@
  	 	 	 	"eng": "You can not start a trade when you are not idle"
  	 	 	},
  	 	 	"cantStartTradeLimited": {
- 	 	 	 	"trans": "Non puoi iniziare un commercio ora",
+ 	 	 	 	"trans": "Non puoi iniziare una sessione di commercio ora",
  	 	 	 	"eng": "You can not start a trade now"
  	 	 	},
  	 	 	"targetPlayerBlockedYou": {
@@ -6651,11 +6651,11 @@
  	 	 	},
  	 	 	"tutorial": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "Pagina di tutorial aperto",
+ 	 	 	 	 	"trans": "Apri la pagina del Tutorial",
  	 	 	 	 	"eng": "Open tutorial Page"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "La pagina del tutorial è nella scheda Profilo -> Tutorial",
+ 	 	 	 	 	"trans": "La pagina del Tutorial è nella scheda Profilo -> Tutorial",
  	 	 	 	 	"eng": "Tutorial Page is in profile tab -> Tutorial"
  	 	 	 	}
  	 	 	}
@@ -7933,7 +7933,7 @@
  	},
  	"gifting": {
  	 	"cannotSend": {
- 	 	 	"trans": "Questo giocatore non può ricevere un regalo ora",
+ 	 	 	"trans": "Questo giocatore non può ricevere regali ora",
  	 	 	"eng": "This player cannot receive gift now"
  	 	}
  	},
