--- a/contribution/lang/vi.json
+++ b/contribution/lang/vi.json
@@ -1364,7 +1364,7 @@
  	 	 	 	 	"eng": "Are you sure you want to select ${itemName}?"
  	 	 	 	},
  	 	 	 	"confirmText": {
- 	 	 	 	 	"trans": Tôi chắc chắn",
+ 	 	 	 	 	"trans": "Tôi chắc chắn",
  	 	 	 	 	"eng": "I am sure"
  	 	 	 	}
  	 	 	}
