--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -2654,7 +2654,7 @@
  	},
  	"inventory": {
  	 	"scrap": {
- 	 	 	"trans": "abandonner",
+ 	 	 	"trans": "recycler",
  	 	 	"eng": "scrap"
  	 	},
  	 	"ui": {
