--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -1387,11 +1387,11 @@
  	 	 	 	"eng": "background music"
  	 	 	},
  	 	 	"enableSoundEffects": {
- 	 	 	 	"trans": "음향 효과",
+ 	 	 	 	"trans": "효과음",
  	 	 	 	"eng": "sound effects"
  	 	 	},
  	 	 	"enableInGameNotificationSound": {
- 	 	 	 	"trans": "게임 알림 사운드에서",
+ 	 	 	 	"trans": "인게임 알람음",
  	 	 	 	"eng": "In game notification sound"
  	 	 	},
  	 	 	"disableAttackBar": {
@@ -1418,7 +1418,7 @@
  	 	 	},
  	 	 	"disableSkipRespectNoti": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "스킵 좋아요 비활성화",
+ 	 	 	 	 	"trans": "스킵 명성 비활성화",
  	 	 	 	 	"eng": "Disable Skip Respect Notification"
  	 	 	 	}
  	 	 	},
@@ -3508,7 +3508,7 @@
  	 	 	"trans": "튜토리얼 페이지",
  	 	 	"eng": "Tutorial Page",
  	 	 	"description": {
- 	 	 	 	"trans": "커뮤니티 튜토리얼 페이지를보고 게임에 대한 자세한 내용을 알아볼 수 있습니다. 시작하는 데 도움이되는 수많은 팁과 가이드가 있습니다!",
+ 	 	 	 	"trans": "게임에 대해 더 알아보고 싶다면 커뮤니티의 튜토리얼 페이지를 확인해 보세요. 시작할 때 도움이 되는 수많은 팁과 가이드가 있습니다!",
  	 	 	 	"eng": "You can take a look at our community tutorial page to learn more about the game. there are tons of tips and guides to help you get started!"
  	 	 	},
  	 	 	"questProgress": {
@@ -3603,23 +3603,23 @@
  	},
  	"MutedScreen": {
  	 	"title": {
- 	 	 	"trans": "채팅 비활성화",
+ 	 	 	"trans": "채팅 비활성화됨",
  	 	 	"eng": "Chat Disabled"
  	 	},
  	 	"description1": {
- 	 	 	"trans": "우리는 이런 일이 일어났습니다. 모든 플레이어에게 안전한 환경을 유지하고 모든 사람이 쾌적한 환경에서 게임을 할 수 있도록해야한다는 것을 이해하십시오. 그것이 우리가 필요할 때 음소거 해야하는 이유입니다. 전체 정보는 아래 링크에서 채팅 규칙을 읽으십시오",
+ 	 	 	"trans": "불편을 드려서 정말로 죄송합니다. 부디 모든 플레이어가 쾌적한 환경에서 게임을 플레이할 수 있게 유지해야 함을 이해해 주세요. 이를 위해서 필요 시 음소거(뮤트)를 할 수 있습니다. 자세한 정보는 아래 채팅 규칙을 읽어주세요.",
  	 	 	"eng": "We are very sorry this happened, please understand we are required to maintain a safe environment for all players and ensure that everyone can play the game in a pleasant environment. Thats why we have to mute when it is needed. please do read our chat rules from the link below for full information"
  	 	},
  	 	"description2": {
- 	 	 	"trans": "그것이 오해라고 생각되면 아래 링크 된 Discord 채널을 통해 중재자에게 문의하십시오.",
+ 	 	 	"trans": "음소거(뮤트)가 잘못되었거나 오해라고 생각한다면, 아래의 Discord 채널 링크를 통해 관리자(모더)에게 문의하십시오.",
  	 	 	"eng": "If you believe it was a misunderstanding, please contact the moderator via our discord channel linked below."
  	 	},
  	 	"description3": {
- 	 	 	"trans": "학대 또는 위법 행위에 대한 중재자를 신고하려면 아래의 이의 제기 양식을 통해 덱스터 (이 앱의 개발자)에게 연락 할 수 있습니다",
+ 	 	 	"trans": "권력 남용 또는 위법 행위로 관리자(모더)를 신고하려면, 아래의 신고 양식을 가지고 덱스터(이 앱의 개발자)에게 연락해주세요.",
  	 	 	"eng": "If you would like to report a moderator for abuse or misconduct, you may reach out to Dexter (the developer of this app) via the appeal form below"
  	 	},
  	 	"description4": {
- 	 	 	"trans": "또는 ching.huang.dexter@gmail.com으로 이메일을 통해 개발자에게 연락 할 수도 있습니다",
+ 	 	 	"trans": "또는, ching.huang.dexter@gmail.com으로 이메일을 통해 연락할 수도 있습니다.",
  	 	 	"eng": "Alternatively, you may also contact the developer via email at ching.huang.dexter@gmail.com"
  	 	},
  	 	"rules": {
@@ -3627,7 +3627,7 @@
  	 	 	"eng": "Chat Rules"
  	 	},
  	 	"appealForm": {
- 	 	 	"trans": "항소 양식",
+ 	 	 	"trans": "신고 양식",
  	 	 	"eng": "Appeal Form"
  	 	}
  	},
@@ -3737,7 +3737,7 @@
  	 	 	"eng": "Waiting for ${playerName} to accept the trade..."
  	 	},
  	 	"lockedItem": {
- 	 	 	"trans": "이 항목을 잠그고 먼저 거래를 위해 잠금 해제했습니다",
+ 	 	 	"trans": "이 아이템은 잠금되었습니다. 거래하려면 우선 잠금을 해제하세요.",
  	 	 	"eng": "You have locked this item, unlock it first to trade"
  	 	},
  	 	"selectAmount": {
@@ -3773,7 +3773,7 @@
  	 	 	 	"eng": "this trade session no longer existed"
  	 	 	},
  	 	 	"cantStartTradeNotIdle": {
- 	 	 	 	"trans": "유후상태가 아니면 거래를 할 수 없습니다",
+ 	 	 	 	"trans": "작업 중에는 거래를 할 수 없습니다",
  	 	 	 	"eng": "You can not start a trade when you are not idle"
  	 	 	},
  	 	 	"cantStartTradeLimited": {
@@ -6547,11 +6547,11 @@
  	 	 	},
  	 	 	"tutorial": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "오픈 튜토리얼 페이지",
+ 	 	 	 	 	"trans": "튜토리얼(가이드) 페이지 열기",
  	 	 	 	 	"eng": "Open tutorial Page"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "튜토리얼 페이지는 프로필 탭에 있습니다 -> 튜토리얼",
+ 	 	 	 	 	"trans": "튜토리얼 페이지는 '프로필 탭 -> 가이드'에 있습니다.",
  	 	 	 	 	"eng": "Tutorial Page is in profile tab -> Tutorial"
  	 	 	 	}
  	 	 	}
@@ -7829,7 +7829,7 @@
  	},
  	"gifting": {
  	 	"cannotSend": {
- 	 	 	"trans": "이 플레이어는 지금 선물을받을 수 없습니다",
+ 	 	 	"trans": "이 플레이어는 지금 선물을 받을 수 없습니다",
  	 	 	"eng": "This player cannot receive gift now"
  	 	}
  	},
