--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -1391,7 +1391,7 @@
  	 	 	 	"eng": "sound effects"
  	 	 	},
  	 	 	"enableInGameNotificationSound": {
- 	 	 	 	"trans": "ゲーム通知音",
+ 	 	 	 	"trans": "ゲーム内通知音",
  	 	 	 	"eng": "In game notification sound"
  	 	 	},
  	 	 	"disableAttackBar": {
@@ -3508,11 +3508,11 @@
  	 	 	"trans": "チュートリアルページ",
  	 	 	"eng": "Tutorial Page",
  	 	 	"description": {
- 	 	 	 	"trans": "私たちのコミュニティチュートリアルページを見て、ゲームの詳細をご覧ください。 あなたが始めるのを助けるために、たくさんのヒントとガイドがあります！",
+ 	 	 	 	"trans": "プレイヤーコミュニティによって作成されたチュートリアルを閲覧できます. このゲームを始める助けとなるヒントや説明がたくさん載っています！",
  	 	 	 	"eng": "You can take a look at our community tutorial page to learn more about the game. there are tons of tips and guides to help you get started!"
  	 	 	},
  	 	 	"questProgress": {
- 	 	 	 	"trans": "チュートリアルクエストが完了します",
+ 	 	 	 	"trans": "チュートリアルクエスト完了",
  	 	 	 	"eng": "Tutorial quest complete"
  	 	 	}
  	 	},
@@ -3603,23 +3603,23 @@
  	},
  	"MutedScreen": {
  	 	"title": {
- 	 	 	"trans": "チャット無効",
+ 	 	 	"trans": "チャットは使用禁止になっています",
  	 	 	"eng": "Chat Disabled"
  	 	},
  	 	"description1": {
- 	 	 	"trans": "これが起こったのは非常に残念です。すべてのプレイヤーの安全な環境を維持し、誰もが快適な環境でゲームをプレイできるようにする必要があることを理解してください。 そのため、必要なときにミュートしなければなりません。 完全な情報については、以下のリンクからチャットルールを読んでください",
+ 	 	 	"trans": "このようなことが起こってしまい, 非常に残念です. 我々にはこのゲームの安全性を保ち, 全プレイヤーが快適に遊べる環境を維持する義務があることをご理解ください. 必要に応じてプレイヤーをミュートするのはそのためです. 下記のリンクからチャットのルールを今一度確認してください.",
  	 	 	"eng": "We are very sorry this happened, please understand we are required to maintain a safe environment for all players and ensure that everyone can play the game in a pleasant environment. Thats why we have to mute when it is needed. please do read our chat rules from the link below for full information"
  	 	},
  	 	"description2": {
- 	 	 	"trans": "誤解だと思われる場合は、以下にリンクしたDiscordチャネルを介してモデレーターに連絡してください。",
+ 	 	 	"trans": "今回の処置が誤解に基づいた不当なものである場合は, お手数ですがDiscordを通じてモデレーターまでご連絡をお願いします.",
  	 	 	"eng": "If you believe it was a misunderstanding, please contact the moderator via our discord channel linked below."
  	 	},
  	 	"description3": {
- 	 	 	"trans": "虐待や不正行為のためにモデレーターを報告したい場合は、以下のアピールフォームからDexter（このアプリの開発者）に連絡することができます",
+ 	 	 	"trans": "モデレーター権限の乱用等, ある人物がモデレーターとして不適任であると報告したい場合には, 以下のフォームからDexter（このアプリの開発者）にご連絡ください.",
  	 	 	"eng": "If you would like to report a moderator for abuse or misconduct, you may reach out to Dexter (the developer of this app) via the appeal form below"
  	 	},
  	 	"description4": {
- 	 	 	"trans": "または、ching.huang.dexter@gmail.comでメールで開発者に連絡することもできます。",
+ 	 	 	"trans": "もしくは, メールで直接Dexterまでご連絡ください. （ching.huang.dexter@gmail.com） ",
  	 	 	"eng": "Alternatively, you may also contact the developer via email at ching.huang.dexter@gmail.com"
  	 	},
  	 	"rules": {
@@ -3627,7 +3627,7 @@
  	 	 	"eng": "Chat Rules"
  	 	},
  	 	"appealForm": {
- 	 	 	"trans": "控訴フォーム",
+ 	 	 	"trans": "通報フォーム",
  	 	 	"eng": "Appeal Form"
  	 	}
  	},
@@ -3725,7 +3725,7 @@
  	"trade": {
  	 	"moneySelectModal": {
  	 	 	"title": {
- 	 	 	 	"trans": "取引にどのくらいのビットコインを縛りたいですか？",
+ 	 	 	 	"trans": "ビットコインをいくらトレードに出しますか？",
  	 	 	 	"eng": "How much Bitcoin would you like to bind to the trade?"
  	 	 	}
  	 	},
@@ -3733,11 +3733,11 @@
  	 	 	"vars": [
  	 	 	 	"playerName"
  	 	 	],
- 	 	 	"trans": "${playerName}が取引を受け入れるのを待っています...",
+ 	 	 	"trans": "${playerName}がトレードを了承するのを待っています...",
  	 	 	"eng": "Waiting for ${playerName} to accept the trade..."
  	 	},
  	 	"lockedItem": {
- 	 	 	"trans": "あなたはこのアイテムをロックしました、最初にそれをロック解除して取引します",
+ 	 	 	"trans": "あなたはこのアイテムをロックしています. ロックを解除してください",
  	 	 	"eng": "You have locked this item, unlock it first to trade"
  	 	},
  	 	"selectAmount": {
@@ -3745,7 +3745,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
  	 	 	 	],
- 	 	 	 	"trans": "${itemName}はいくつて取引したいですか？",
+ 	 	 	 	"trans": "${itemName}をいくつトレードに出しますか？",
  	 	 	 	"eng": "How many ${itemName} would you like to trade?"
  	 	 	}
  	 	},
@@ -3763,7 +3763,7 @@
  	 	},
  	 	"unlockButton": {
  	 	 	"title": {
- 	 	 	 	"trans": "ロックを解除します",
+ 	 	 	 	"trans": "ロック解除",
  	 	 	 	"eng": "Unlock"
  	 	 	}
  	 	},
@@ -3777,7 +3777,7 @@
  	 	 	 	"eng": "You can not start a trade when you are not idle"
  	 	 	},
  	 	 	"cantStartTradeLimited": {
- 	 	 	 	"trans": "あなたは今取引を始めることができません",
+ 	 	 	 	"trans": "今はトレードを開始できません",
  	 	 	 	"eng": "You can not start a trade now"
  	 	 	},
  	 	 	"targetPlayerBlockedYou": {
@@ -6626,7 +6626,7 @@
  	 	 	 	 	"eng": "Use global chat"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "他のプレイヤーとチャットをする. スパムは許可されていません",
+ 	 	 	 	 	"trans": "他のプレイヤーとチャットをする（スパムメッセージの投稿は禁止）",
  	 	 	 	 	"eng": "Chat with other players, spam not allowed"
  	 	 	 	}
  	 	 	},
@@ -6652,11 +6652,11 @@
  	 	 	},
  	 	 	"tutorial": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "チュートリアルページを開きます",
+ 	 	 	 	 	"trans": "チュートリアルページを開く",
  	 	 	 	 	"eng": "Open tutorial Page"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "チュートリアルページは[プロファイル]タブ - >チュートリアルです",
+ 	 	 	 	 	"trans": "チュートリアルページは[プロフィール]タブの「チュートリアル」にあります",
  	 	 	 	 	"eng": "Tutorial Page is in profile tab -> Tutorial"
  	 	 	 	}
  	 	 	}
@@ -7932,7 +7932,7 @@
  	},
  	"gifting": {
  	 	"cannotSend": {
- 	 	 	"trans": "このプレーヤーは今ギフトを受け取ることができません",
+ 	 	 	"trans": "このプレーヤーは現在ギフトを受け取ることができません",
  	 	 	"eng": "This player cannot receive gift now"
  	 	}
  	},
