--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -2806,7 +2806,7 @@
  	 	},
  	 	"bargain": {
  	 	 	"name": {
- 	 	 	 	"trans": "Contrattazione",
+ 	 	 	 	"trans": "Trattativa",
  	 	 	 	"eng": "Bargain"
  	 	 	},
  	 	 	"description": {
@@ -5231,7 +5231,7 @@
  	 	},
  	 	"lootBox1": {
  	 	 	"name": {
- 	 	 	 	"trans": "Contenitore Bloccato",
+ 	 	 	 	"trans": "Contenitore Chiuso",
  	 	 	 	"eng": "locked container"
  	 	 	},
  	 	 	"description": {
@@ -5241,7 +5241,7 @@
  	 	},
  	 	"lootBox2": {
  	 	 	"name": {
- 	 	 	 	"trans": "Contenitore Bloccato Raro",
+ 	 	 	 	"trans": "Contenitore Chiuso Raro",
  	 	 	 	"eng": "locked rare container"
  	 	 	},
  	 	 	"description": {
@@ -5251,7 +5251,7 @@
  	 	},
  	 	"lootBox3": {
  	 	 	"name": {
- 	 	 	 	"trans": "Contenitore Bloccato Leggendario",
+ 	 	 	 	"trans": "Contenitore Chiuso Leggendario",
  	 	 	 	"eng": "locked legendary container"
  	 	 	},
  	 	 	"description": {
@@ -5596,7 +5596,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"percent"
  	 	 	 	],
- 	 	 	 	"trans": "Questi ravioli non sono come gli altri. Realizzati con amore e cura da Yen, queste deliziose sacche di bontà sono ripiene degli ingredienti migliori e cotti alla perfezione. \\n Se consumati permettono di recuperare il ${percent}% di salute",
+ 	 	 	 	"trans": "Questi ravioli non sono come gli altri. Realizzati con amore e cura da Yen, queste deliziose sacche di bontà sono ripiene degli ingredienti migliori e cotti alla perfezione.\n Se consumati permettono di recuperare il ${percent}% di salute",
  	 	 	 	"eng": "These dumplings are unlike any other. Made with love and care by Yen, these delicious pockets of goodness are filled with the finest ingredients and cooked to perfection.\\n recover ${percent}% health upon consumption"
  	 	 	}
  	 	},
@@ -5609,7 +5609,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"percent"
  	 	 	 	],
- 	 	 	 	"trans": "L'appiccicosa e dolce torta di riso è un cibo tradizionale di Capodanno Lunare e si ritiene che porti buona fortuna e prosperità.\\n Se consumata permette di recuperare il ${percent}% di scudo",
+ 	 	 	 	"trans": "L'appiccicosa e dolce torta di riso è un cibo tradizionale di Capodanno Lunare e si ritiene che porti buona fortuna e prosperità.\n Se consumata permette di recuperare il ${percent}% di scudo",
  	 	 	 	"eng": "sticky and sweet rice cake is a traditional Lunar New Year food and is believed to bring good luck and prosperity.\\n recover ${percent}% shield upon consumption"
  	 	 	}
  	 	},
@@ -6738,7 +6738,7 @@
  	 	},
  	 	"christmasToBox": {
  	 	 	"name": {
- 	 	 	 	"trans": "Contenitore Bloccato Leggendario",
+ 	 	 	 	"trans": "Contenitore Chiuso Leggendario",
  	 	 	 	"eng": "Locked Legendary Container"
  	 	 	}
  	 	},
@@ -7104,11 +7104,11 @@
  	},
  	"itemTrait": {
  	 	"stun": {
- 	 	 	"trans": "da Stordimento",
+ 	 	 	"trans": "dello Stordimento",
  	 	 	"eng": "of Stunning"
  	 	},
  	 	"bargain": {
- 	 	 	"trans": "da Contrattazione",
+ 	 	 	"trans": "della Trattativa",
  	 	 	"eng": "of Bargaining"
  	 	},
  	 	"power": {
@@ -7124,15 +7124,15 @@
  	 	 	"eng": "of Life"
  	 	},
  	 	"maxShield": {
- 	 	 	"trans": "da Protezione",
+ 	 	 	"trans": "della Protezione",
  	 	 	"eng": "of Shielding"
  	 	},
  	 	"sneaky": {
- 	 	 	"trans": "da Fuga",
+ 	 	 	"trans": "della Furtività",
  	 	 	"eng": "of Sneaking"
  	 	},
  	 	"evade": {
- 	 	 	"trans": "da Schivata",
+ 	 	 	"trans": "della Schivata",
  	 	 	"eng": "of Evasion"
  	 	},
  	 	"pocketed": {
@@ -7172,31 +7172,31 @@
  	 	 	"eng": "of Shield"
  	 	},
  	 	"upgradeSneaky": {
- 	 	 	"trans": "da Intrufolamento",
+ 	 	 	"trans": "Furtività",
  	 	 	"eng": "of Sneaking"
  	 	},
  	 	"upgradeHealthRegen": {
- 	 	 	"trans": "della Rigenerazione",
+ 	 	 	"trans": "Rigenerazione",
  	 	 	"eng": "of Life"
  	 	},
  	 	"upgradeStun": {
- 	 	 	"trans": "da Stordimento",
+ 	 	 	"trans": "Stordimento",
  	 	 	"eng": "of Stun"
  	 	},
  	 	"upgradeCriticalChance": {
- 	 	 	"trans": "della Probabilità Critica",
+ 	 	 	"trans": "% Critico",
  	 	 	"eng": "of Crit Chance"
  	 	},
  	 	"upgradeCriticalDamage": {
- 	 	 	"trans": "del Danno Critico",
+ 	 	 	"trans": "Danno Critico",
  	 	 	"eng": "of Crit Damage"
  	 	},
  	 	"upgradeEvade": {
- 	 	 	"trans": "da Schivata",
+ 	 	 	"trans": "Schivata",
  	 	 	"eng": "of Evade"
  	 	},
  	 	"upgradePocketed": {
- 	 	 	"trans": "di Espansione",
+ 	 	 	"trans": "Slot",
  	 	 	"eng": "of Expansion"
  	 	}
  	},
