--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -1827,7 +1827,7 @@
  	 	 	 	 	"eng": "Character Name"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "如果您使用冒犯的或不適當的名稱，您將會被禁言",
+ 	 	 	 	 	"trans": "如果您使用冒犯或不適當的名稱，您將會被禁言",
  	 	 	 	 	"eng": "you will be muted if you use an offensive or inappropriate name."
  	 	 	 	}
  	 	 	},
@@ -5409,7 +5409,7 @@
  	 	 	 	"eng": "Employee Office Case"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "一個標準的公事包，有一個標籤上面印著白色的「Arasaka」\r\n         雖然它有一些用於儲存文件的高科技隔間和插槽，但它並不是很適合存放武器\r\n         裝備時增加背包容量",
+ 	 	 	 	"trans": "一個標準的公事包，有一個標籤上面印著白色的「Arasaka」\r\n         雖然它有一些用於儲存文件的高科技隔層和插槽，但它並不是很適合存放武器\r\n         裝備時增加背包容量",
  	 	 	 	"eng": "An standard issue office case, it has a label with whit print with \"Arasaka\" on it, \r\n        while it is specious and has some high tech compartment and slots for document storage, it is not not very suitable for carrying weapons\r\n        increase inventory space when equipped"
  	 	 	}
  	 	},
@@ -5419,7 +5419,7 @@
  	 	 	 	"eng": "Autonomous Storage Unit"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "軍用機器人設計可為您攜帶裝備並自動跟隨您，\r\n         利用他六條強壯的腿、仿蜘蛛的移動方式和搭載的進階人工智慧，\r\n         它可以迅速且安靜的跟隨著您並且避免妨礙到您執行任務",
+ 	 	 	 	"trans": "軍用機器人可為您攜帶裝備並自動跟隨您，\r\n         利用他六條強壯的腿、仿蜘蛛的移動方式和進階人工智慧，\r\n         它可以迅速且安靜的跟隨著您並且避免妨礙到您執行任務",
  	 	 	 	"eng": "An military used bot designed to carry your equipments and follows you autonomously,\r\n        with it's six strong legs that imitates the movement of spiders and a advance onboard AI, \r\n        it can follow you swiftly and quietly while it avoids get in the way of whatever mission you are performing"
  	 	 	}
  	 	},
@@ -5429,7 +5429,7 @@
  	 	 	 	"eng": "Chat exploit transmitter [PIRATE]"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "攔截全球聊天包並加以修改，執行中間人攻擊的漏洞利用模組。\r\n         將全球聊天的所有對話轉換為 PIRATE, 這會影響所有玩家10分鐘",
+ 	 	 	 	"trans": "攔截全球聊天封包並加以修改，執行中間人攻擊的漏洞利用模組。\r\n         將全球聊天的所有對話轉換為 PIRATE, 這會影響所有玩家10分鐘",
  	 	 	 	"eng": "A exploit module that intercepts global chat packages and modifies it, performing Man-In-The-Middle attack.\r\n        Transforms all speech at global chat to Pirate Speak. This effects all players for 10 minutes"
  	 	 	}
  	 	},
@@ -5439,7 +5439,7 @@
  	 	 	 	"eng": "Chat exploit transmitter [1337]"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "攔截全球聊天包並加以修改，執行中間人攻擊的漏洞利用模組。\r\n         將全球聊天的所有對話轉換為 l33t Sp34k，這會影響所有玩家10分鐘",
+ 	 	 	 	"trans": "攔截全球聊天封包並加以修改，執行中間人攻擊的漏洞利用模組。\r\n         將全球聊天的所有對話轉換為 l33t Sp34k，這會影響所有玩家10分鐘",
  	 	 	 	"eng": "A exploit module that intercepts global chat packages and modifies it, performing Man-In-The-Middle attack.\r\n        Transforms all speech at global chat to l33t Sp34k. This effects all players for 10 minutes"
  	 	 	}
  	 	},
@@ -5449,7 +5449,7 @@
  	 	 	 	"eng": "Chat exploit transmitter [UwU]"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "攔截全球聊天包並加以修改，執行中間人攻擊的漏洞利用模組。\r\n          將全球聊天的所有對話轉換為 uwu，這會影響所有玩家10分鐘",
+ 	 	 	 	"trans": "攔截全球聊天封包並加以修改，執行中間人攻擊的漏洞利用模組。\r\n          將全球聊天的所有對話轉換為 uwu，這會影響所有玩家10分鐘",
  	 	 	 	"eng": "A expwoit moduwe that intewcepts gwobaw chat packages and modifies it, pewfowming man-in-the-middwe attack.\r\n         twansfowms aww speech at gwobaw chat to uwu speak. This effects aww pwayews fow 10 minutes"
  	 	 	}
  	 	},
@@ -5479,7 +5479,7 @@
  	 	 	 	"eng": "Personal Synaptic Accelerator"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "使用後，掛機任務用時減少60分鐘。\r\n         必須在掛機畫面上使用",
+ 	 	 	 	"trans": "使用後，掛機任務所需時間減少60分鐘。\r\n         必須在掛機畫面上使用",
  	 	 	 	"eng": "When used, skip 60 minutes on AFK tasks.\r\n        must be used at AFK screen"
  	 	 	}
  	 	},
@@ -5525,7 +5525,7 @@
  	 	 	 	 	"maxStack",
  	 	 	 	 	"time"
  	 	 	 	],
- 	 	 	 	"trans": "一個高科技晶片，可增加高階物品隨機生成的機率。 在解鎖傳奇容器（不可堆疊）以獲得${time}分鐘，獲得傳奇（${legendaryChance}％）和史詩（${epicChance}％）物品的額外機率。 *重要提示：只有在此加成處於啟用狀態時開始解鎖容器的動作，才會產生作用。",
+ 	 	 	 	"trans": "一個高科技晶片，可增加高階物品隨機生成的機率。 在解鎖傳奇容器（不可堆疊）以獲得${time}分鐘，獲得傳奇（${legendaryChance}％）和史詩（${epicChance}％）物品的額外機率。 *重要提示：只有在此加成處於啟用狀態時開始解鎖容器才有效。",
  	 	 	 	"eng": "A shard that contains advance exploits designed to increase random drop chance of high tier items. Gains additional drop chance of Legendary (${legendaryChance}%) and Epic (${epicChance}%) items when unlocking Legendary containers (Not stackable) for ${time} minute (Applies to all players). *IMPORTANT: The buff will only apply when the unlocking process is started while the buff is active*."
  	 	 	}
  	 	},
@@ -5563,7 +5563,7 @@
  	 	 	 	 	"time",
  	 	 	 	 	"costMult"
  	 	 	 	],
- 	 	 	 	"trans": "當Shard活躍時，所有玩家都可以選擇在Boost Mode™中啟動某些AFK任務，從而獲得${rewardMult} X獎勵，同時將成本和持續時間提高到${costMult} x。 \\ n *此項目仍然是beta，並且有可能發生平衡變化，請立即購買後使用 *",
+ 	 	 	 	"trans": "當碎片啟動時，所有玩家都可以選擇在Boost Mode™中啟動某些AFK任務，從而獲得${rewardMult} X獎勵，同時將成本和持續時間提高到${costMult} x。 \\ n *此物品仍在測試中，並且有可能發生平衡變化，購買後請立刻使用 *",
  	 	 	 	"eng": "While shard is active all players can choose to start certain AFK tasks in Boost Mode™, gaining ${rewardMult}x reward while increasing cost and duration by ${costMult}x. \\n* This item is still beta and subject to balance change, please use immediately after purchase *"
  	 	 	}
  	 	},
@@ -7030,7 +7030,7 @@
  	 	 	 	"eng": "Share Dungeon to chat?"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "您可以分享當前的地下城到至聊天室。",
+ 	 	 	 	"trans": "您可以分享目前的地下城到至聊天室。",
  	 	 	 	"eng": "You can share your current dungeon to chat."
  	 	 	},
  	 	 	"cancel": {
@@ -7051,7 +7051,7 @@
  	 	 	"eng": "Do you think you are strong enough? take on stronger enemies in dungeon!\r\n                        remember to buy some healing item! you won't regen after battle in dungeon"
  	 	},
  	 	"cleared": {
- 	 	 	"trans": "地牢清除了！",
+ 	 	 	"trans": "已清除地牢！",
  	 	 	"eng": "Dungeon cleared!"
  	 	}
  	},
@@ -7951,7 +7951,7 @@
  	 	 	 	"eng": "You can't perform this action now"
  	 	 	},
  	 	 	"invalidTravelLink": {
- 	 	 	 	"trans": "無效的旅行鏈接，如果持續存在，請重新加載",
+ 	 	 	 	"trans": "無效的旅行連結，如果持續存在，請重新加載",
  	 	 	 	"eng": "Invalid Travel Link, if persist please reload"
  	 	 	}
  	 	},
@@ -7981,22 +7981,22 @@
  	 	},
  	 	"giveCred": {
  	 	 	"success": {
- 	 	 	 	"trans": "您已成功與給予街頭名譽",
+ 	 	 	 	"trans": "您已成功與給予街頭聲望",
  	 	 	 	"eng": "You have given daily street cred."
  	 	 	},
  	 	 	"notEnoughLevelError": {
- 	 	 	 	"trans": "您必須是10級或以上才能給玩家街頭名譽",
+ 	 	 	 	"trans": "您必須是10級或以上才能給玩家街頭聲望",
  	 	 	 	"eng": "You must be level 10 or above to give player street cred"
  	 	 	},
  	 	 	"cooldownError": {
- 	 	 	 	"trans": "您還不能給街頭名譽（每天一次）",
+ 	 	 	 	"trans": "您還不能給街頭聲望（每天一次）",
  	 	 	 	"eng": "You cannot give street cred yet (once every day)"
  	 	 	}
  	 	}
  	},
  	"basicInfo": {
  	 	"nameUsed": {
- 	 	 	"trans": "此名稱由其他玩家使用，請使用其他名稱",
+ 	 	 	"trans": "此名稱已由其他玩家使用，請使用其他名稱",
  	 	 	"eng": "this name is used by other player, please use other name"
  	 	},
  	 	"nameIllegal": {
@@ -8008,7 +8008,7 @@
  	 	 	"eng": "This name contains wordings not allowed, please use other name"
  	 	},
  	 	"nameInvalid": {
- 	 	 	"trans": "名稱長度必須大於4，少於或等於16，並且僅包含英語字符，數字或\\'_ \\'",
+ 	 	 	"trans": "名稱長度必須大於4，少於或等於16，並且僅包含英文字母，數字或\\'_ \\'",
  	 	 	"eng": "name length must be greater then 4, less then or equal to 16 and only contains English characters, numbers or \\'_\\'"
  	 	}
  	}
